--- a/life_expectancy/notebook.ipynb
+++ b/life_expectancy/notebook.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,167 +54,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>unit</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>region</th>\n",
-       "      <th>year</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Y65</td>\n",
-       "      <td>DK</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>20.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Y65</td>\n",
-       "      <td>ES</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>23.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Y65</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>14.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Y65</td>\n",
-       "      <td>LI</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>21.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Y65</td>\n",
-       "      <td>LU</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>19.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48496</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>T</td>\n",
-       "      <td>Y83</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48497</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>T</td>\n",
-       "      <td>Y84</td>\n",
-       "      <td>CZ</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>4.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48498</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>T</td>\n",
-       "      <td>Y84</td>\n",
-       "      <td>DE_TOT</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>4.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48499</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>T</td>\n",
-       "      <td>Y84</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>4.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48500</th>\n",
-       "      <td>YR</td>\n",
-       "      <td>T</td>\n",
-       "      <td>Y9</td>\n",
-       "      <td>PT</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>62.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>48501 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      unit sex  age  region  year  value\n",
-       "0       YR   F  Y65      DK  2021   20.9\n",
-       "1       YR   F  Y65      ES  2021   23.5\n",
-       "2       YR   M  Y65      HR  2021   14.4\n",
-       "3       YR   M  Y65      LI  2021   21.2\n",
-       "4       YR   M  Y65      LU  2021   19.1\n",
-       "...    ...  ..  ...     ...   ...    ...\n",
-       "48496   YR   T  Y83      NO  1960    5.0\n",
-       "48497   YR   T  Y84      CZ  1960    4.7\n",
-       "48498   YR   T  Y84  DE_TOT  1960    4.1\n",
-       "48499   YR   T  Y84      NO  1960    4.6\n",
-       "48500   YR   T   Y9      PT  1960   62.9\n",
-       "\n",
-       "[48501 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "life_expectancy_df"
+    "life_expectancy_df = cleaning.clean_data(life_expectancy_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "life_expectancy_df = cleaning.filter_region(life_expectancy_df, region='PT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "life_expectancy_df.to_csv('/home/erstome/DareData/pod6_assignments/life_expectancy/tests/fixtures/pt_life_expectancy_expected.csv',\n",
+    "                          index=False)"
    ]
   },
   {
